k8s/app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: techcon-app-deployment
  namespace: default
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 0
  selector:
    matchLabels:
      app: techcon-app
  template:
    metadata:
      labels:
        app: techcon-app
      annotations:
        timestamp: __TIMESTAMP__
    spec:
      containers:
      - name: techcon-app
        image: gcr.io/gree-tech-conference-dev/server:latest
        ports:
        - containerPort: 8080
