k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: techcon-app-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: techcon-app
