k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: techcon-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: techcon-app-service
              servicePort: 80
